# credenza

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: credenza.yaml
config/: credenza.env  deploy-redhat-standalone.sh  oidc_idp_claim_map.json  oidc_idp_profiles.json  oidc_idp_profiles.sample.json  oidc_idp_trusted_issuers.json  redis.conf.in  wsgi_credenza.conf.in
credenza/: app.py  credenza_wsgi.py
credenza/api/: claim_mapper.py  claim_resolver.py  oidc_client.py  util.py
credenza/api/session/augmentation/: base_provider.py  deriva_provider.py  globus_provider.py
credenza/api/session/storage/: session_store.py
credenza/api/session/storage/backends/: __init__.py  base.py  memory.py  postgresql.py  redis.py  sqlite.py  valkey.py
credenza/broker/: app.py
credenza/broker/api/session/augmentation/: base_provider.py  globus_provider.py
credenza/broker/api/session/storage/backends/: __init__.py  redis.py
credenza/broker/refresh/: refresh_worker.py
credenza/broker/rest/: device_flow.py  login_flow.py
credenza/broker/telemetry/audit/: logger.py
credenza/broker/telemetry/metrics/: prometheus.py
credenza/refresh/: refresh_worker.py
credenza/rest/: device_flow.py  discovery.py  login_flow.py  session.py
credenza/telemetry/audit/: logger.py
docs/: credenza_nist800-53_crosswalk.md
test/: conftest.py  credenza-device-helper
test/api/: test_claim_mapper.py  test_claim_resolver.py  test_oidc_client.py  test_oidc_client_negative.py  test_session_augmentation.py  test_session_store.py  test_storage_backend.py  test_util.py
test/refresh/: test_refresh_worker.py
test/rest/: test_device_flow.py  test_login_flow.py  test_session.py
